--- a/app/src/main/res/layout/movie_id_list_item.xml
+++ b/app/src/main/res/layout/movie_id_list_item.xml
@@ -15,6 +15,7 @@
         android:src="@drawable/ic_play_arrow_black_24dp" />
 
     <TextView
+        android:id="@+id/trailers_movies"
         android:hint="Trailer1"
         android:layout_gravity="center"
         android:textSize="25sp"
